[gd_scene load_steps=50 format=3 uid="uid://bkqsn5lwyrsop"]

[ext_resource type="Script" path="res://enemies/car/enemy_car.gd" id="1_fpeiw"]
[ext_resource type="Script" path="res://components/health/health.gd" id="1_lgj22"]
[ext_resource type="Texture2D" uid="uid://dxgroo4ufn7ac" path="res://assets/textures/circle.png" id="2_8tnti"]
[ext_resource type="Script" path="res://components/states/state_machine.gd" id="3_7hb5b"]
[ext_resource type="PackedScene" uid="uid://bw8338ilrtcwc" path="res://components/trail/trail.tscn" id="3_ius2y"]
[ext_resource type="Script" path="res://enemies/car/states/spawn.gd" id="4_g1ixq"]
[ext_resource type="Script" path="res://enemies/car/states/hunt.gd" id="4_g4psh"]
[ext_resource type="PackedScene" uid="uid://ouku35n2g1oe" path="res://components/shadow/shadow.tscn" id="4_iptr5"]
[ext_resource type="Script" path="res://enemies/car/states/chase.gd" id="5_5ud6p"]
[ext_resource type="Script" path="res://enemies/car/states/dash.gd" id="6_farhp"]
[ext_resource type="PackedScene" uid="uid://bbg3rfqwxe0mh" path="res://components/height_sprite/height_sprite.tscn" id="6_lmius"]
[ext_resource type="Script" path="res://enemies/car/states/dead.gd" id="7_ktwdc"]
[ext_resource type="Texture2D" uid="uid://dc7h6somg0kbo" path="res://assets/textures/enemy_car.png" id="7_nlruf"]
[ext_resource type="PackedScene" uid="uid://dvvktbgt1ayca" path="res://components/hurtbox/hurtbox.tscn" id="8_4la8y"]
[ext_resource type="PackedScene" uid="uid://bd83v7x2q3o7f" path="res://components/hitbox/hitbox.tscn" id="9_eh00a"]
[ext_resource type="Shader" path="res://enemies/flash.gdshader" id="12_5mjfr"]
[ext_resource type="Shader" path="res://player/shadow.gdshader" id="12_amy43"]
[ext_resource type="AudioStream" uid="uid://kanxo2r34r44" path="res://assets/sounds/baddash.wav" id="17_wgsew"]
[ext_resource type="AudioStream" uid="uid://dtfpoe1k6rrwd" path="res://assets/sounds/drive.ogg" id="18_akhsm"]
[ext_resource type="AudioStream" uid="uid://g8p40mlfymnj" path="res://assets/sounds/badow.wav" id="18_mljar"]
[ext_resource type="AudioStream" uid="uid://cqanspeejfund" path="res://assets/sounds/baddie.wav" id="19_573nd"]
[ext_resource type="PackedScene" uid="uid://demfojgj1mxdb" path="res://components/weapons/dyna_turn_weapon.tscn" id="22_mmdmo"]
[ext_resource type="PackedScene" uid="uid://bruf7aqh8on5" path="res://components/weapons/bullet_turn_weapon.tscn" id="23_gjdqh"]
[ext_resource type="PackedScene" uid="uid://8cncbayk5yqk" path="res://components/weapons/hit_bullet_weapon.tscn" id="24_5xxqo"]
[ext_resource type="PackedScene" uid="uid://d1nvq2qmpyeo5" path="res://components/weapons/dyna_spam_weapon.tscn" id="25_naokf"]
[ext_resource type="PackedScene" uid="uid://cyq0ka0s1k672" path="res://components/weapons/bullet_spam_weapon.tscn" id="26_atya4"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_d2opd"]
bounce = 0.5

[sub_resource type="Curve" id="Curve_esg0n"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_1hkmo"]
curve = SubResource("Curve_esg0n")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hx72l"]
particle_flag_disable_z = true
direction = Vector3(-1, 0, 0)
spread = 5.0
initial_velocity_min = 16.0
initial_velocity_max = 64.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.2
scale_curve = SubResource("CurveTexture_1hkmo")
color = Color(0.592734, 0.419391, 1.92523e-07, 1)

[sub_resource type="Gradient" id="Gradient_r04c0"]
offsets = PackedFloat32Array(0, 0.413174, 0.736527, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 1, 0.203922, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xoohi"]
gradient = SubResource("Gradient_r04c0")

[sub_resource type="Curve" id="Curve_w3yf0"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_d7p0r"]
curve = SubResource("Curve_w3yf0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rsaiq"]
particle_flag_disable_z = true
angle_min = 1.07288e-05
angle_max = 360.0
spread = 180.0
initial_velocity_min = 16.0
initial_velocity_max = 32.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector3(0, 0, 0)
scale_max = 5.0
scale_curve = SubResource("CurveTexture_d7p0r")
color_initial_ramp = SubResource("GradientTexture1D_xoohi")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ic2gd"]
resource_local_to_scene = true
shader = ExtResource("12_amy43")
shader_parameter/color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_prntb"]
resource_local_to_scene = true
shader = ExtResource("12_5mjfr")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0, 0, 1)

[sub_resource type="Animation" id="Animation_uhnof"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_g1b52"]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kpmgu"]
_data = {
"RESET": SubResource("Animation_uhnof"),
"hurt": SubResource("Animation_g1b52")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vwiw8"]
radius = 6.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nbtxi"]
radius = 6.0
height = 18.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eq223"]
size = Vector2(8, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6df35"]
size = Vector2(5, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_alt04"]
radius = 128.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_3y8hq"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("17_wgsew")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_8s7he"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("18_mljar")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_55e1c"]
random_pitch = 1.5
streams_count = 1
stream_0/stream = ExtResource("19_573nd")

[sub_resource type="CircleShape2D" id="CircleShape2D_0uxak"]

[node name="EnemyCar" type="RigidBody2D" node_paths=PackedStringArray("sprite", "shadow", "dirt_trail_1", "dirt_trail_2", "rear_1", "rear_2", "hard_hitbox_collision", "soft_hitbox_collision", "collision", "hurtbox_collision", "hurt_player", "health", "smoke_particles", "drive_sound", "dash_sound", "hurt_sound", "die_sound", "fortnite_timer", "dyna_turn", "bullet_turn", "bullet_hit", "dyna_spam", "bullet_spam")]
collision_layer = 10
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_d2opd")
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 4
linear_damp = 2.5
angular_damp = 2.5
script = ExtResource("1_fpeiw")
sprite = NodePath("HeightSprite")
shadow = NodePath("Shadow")
dirt_trail_1 = NodePath("Rear1/DirtTrail")
dirt_trail_2 = NodePath("Rear2/DirtTrail2")
rear_1 = NodePath("Rear1")
rear_2 = NodePath("Rear2")
hard_hitbox_collision = NodePath("HardHitbox/CollisionShape2D")
soft_hitbox_collision = NodePath("SoftHitbox/CollisionShape2D")
collision = NodePath("CollisionShape2D")
hurtbox_collision = NodePath("Hurtbox/CollisionShape2D")
hurt_player = NodePath("HeightSprite/AnimationPlayer")
health = NodePath("Health")
smoke_particles = NodePath("Rear3/Smoke")
drive_sound = NodePath("Drive")
dash_sound = NodePath("Dash")
hurt_sound = NodePath("Hurt")
die_sound = NodePath("Die")
fortnite_timer = NodePath("Fortnite")
dyna_turn = NodePath("DynaTurnWeapon")
bullet_turn = NodePath("BulletTurnWeapon")
bullet_hit = NodePath("HitBulletWeapon")
dyna_spam = NodePath("DynaSpamWeapon")
bullet_spam = NodePath("BulletSpamWeapon")

[node name="Health" type="Node" parent="."]
script = ExtResource("1_lgj22")
max_health = 20

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_7hb5b")
initial_state = NodePath("Spawn")

[node name="Spawn" type="Node" parent="StateMachine" node_paths=PackedStringArray("start_timer")]
script = ExtResource("4_g1ixq")
start_timer = NodePath("StartTimer")

[node name="StartTimer" type="Timer" parent="StateMachine/Spawn"]
one_shot = true

[node name="Hunt" type="Node" parent="StateMachine" node_paths=PackedStringArray("turn_timer")]
script = ExtResource("4_g4psh")
min_turn_cooldown = 0.25
max_turn_cooldown = 1.0
turn_timer = NodePath("TurnTimer")

[node name="TurnTimer" type="Timer" parent="StateMachine/Hunt"]
one_shot = true

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("give_up_timer", "dash_timer")]
script = ExtResource("5_5ud6p")
give_up_timer = NodePath("GiveUpTimer")
dash_timer = NodePath("DashTimer")

[node name="GiveUpTimer" type="Timer" parent="StateMachine/Chase"]
wait_time = 5.0
one_shot = true

[node name="DashTimer" type="Timer" parent="StateMachine/Chase"]
wait_time = 3.0
one_shot = true

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("dash_timer")]
script = ExtResource("6_farhp")
cooldown = 0.25
dash_timer = NodePath("DashTimer")

[node name="DashTimer" type="Timer" parent="StateMachine/Dash"]
one_shot = true

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("7_ktwdc")

[node name="Rear1" type="Marker2D" parent="."]
position = Vector2(-4, -5)

[node name="DirtTrail" type="GPUParticles2D" parent="Rear1"]
emitting = false
amount = 75
process_material = SubResource("ParticleProcessMaterial_hx72l")
texture = ExtResource("2_8tnti")
lifetime = 2.0
randomness = 1.0
visibility_rect = Rect2(-128, -128, 256, 256)

[node name="Trail" parent="Rear1" instance=ExtResource("3_ius2y")]
modulate = Color(0.592734, 0.419391, 1.92523e-07, 1)
z_index = -1
z_as_relative = false
length = 256

[node name="Rear2" type="Marker2D" parent="."]
position = Vector2(-4, 5)

[node name="DirtTrail2" type="GPUParticles2D" parent="Rear2"]
emitting = false
amount = 75
process_material = SubResource("ParticleProcessMaterial_hx72l")
texture = ExtResource("2_8tnti")
lifetime = 2.0
randomness = 1.0
visibility_rect = Rect2(-128, -128, 256, 256)

[node name="Trail" parent="Rear2" instance=ExtResource("3_ius2y")]
modulate = Color(0.592734, 0.419391, 1.92523e-07, 1)
z_index = -1
z_as_relative = false
length = 256

[node name="Rear3" type="Marker2D" parent="."]
position = Vector2(-8, 0)

[node name="Smoke" type="GPUParticles2D" parent="Rear3"]
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_rsaiq")
visibility_rect = Rect2(-128, -128, 256, 256)

[node name="Shadow" parent="." node_paths=PackedStringArray("caster") instance=ExtResource("4_iptr5")]
material = SubResource("ShaderMaterial_ic2gd")
texture = ExtResource("7_nlruf")
hframes = 6
caster = NodePath("../HeightSprite")
max_height = 512.0

[node name="HeightSprite" parent="." instance=ExtResource("6_lmius")]
material = SubResource("ShaderMaterial_prntb")
texture = ExtResource("7_nlruf")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="HeightSprite"]
libraries = {
"": SubResource("AnimationLibrary_kpmgu")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_vwiw8")

[node name="Hurtbox" parent="." node_paths=PackedStringArray("health") instance=ExtResource("8_4la8y")]
health = NodePath("../Health")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nbtxi")
disabled = true

[node name="HardHitbox" parent="." instance=ExtResource("9_eh00a")]
collision_layer = 64
collision_mask = 12
damage = 10
knockback_strength = 128.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HardHitbox"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_eq223")
disabled = true

[node name="SoftHitbox" parent="." instance=ExtResource("9_eh00a")]
collision_layer = 64
collision_mask = 12
invinc_time = 0.1
knockback_strength = -8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftHitbox"]
position = Vector2(6.5, 0)
shape = SubResource("RectangleShape2D_6df35")
disabled = true

[node name="CarFinder" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarFinder"]
position = Vector2(64, 1)
shape = SubResource("CircleShape2D_alt04")

[node name="Raycasts" type="Node2D" parent="."]

[node name="WallDetect1" type="RayCast2D" parent="Raycasts"]
rotation = -0.785398
target_position = Vector2(32, 0)

[node name="WallDetect2" type="RayCast2D" parent="Raycasts"]
rotation = -0.392699
target_position = Vector2(48, 0)

[node name="WallDetect3" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(64, 0)

[node name="WallDetect4" type="RayCast2D" parent="Raycasts"]
rotation = 0.392699
target_position = Vector2(48, 0)

[node name="WallDetect5" type="RayCast2D" parent="Raycasts"]
rotation = 0.785398
target_position = Vector2(32, 0)

[node name="WallDetect6" type="RayCast2D" parent="Raycasts"]
rotation = -1.5708
target_position = Vector2(16, 0)

[node name="WallDetect7" type="RayCast2D" parent="Raycasts"]
rotation = 1.5708
target_position = Vector2(16, 0)

[node name="Dash" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_3y8hq")
volume_db = -10.0
max_distance = 256.0
bus = &"sfx"

[node name="Hurt" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_8s7he")
max_distance = 256.0
bus = &"sfx"

[node name="Drive" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("18_akhsm")
volume_db = -10.0
pitch_scale = 0.01
autoplay = true
max_distance = 256.0
bus = &"sfx"

[node name="Die" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_55e1c")
volume_db = -10.0
autoplay = true
max_distance = 256.0
bus = &"sfx"

[node name="ArenaDetect" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArenaDetect"]
shape = SubResource("CircleShape2D_0uxak")

[node name="Fortnite" type="Timer" parent="."]
wait_time = 0.5

[node name="DynaTurnWeapon" parent="." node_paths=PackedStringArray("car") instance=ExtResource("22_mmdmo")]
car = NodePath("..")

[node name="BulletTurnWeapon" parent="." node_paths=PackedStringArray("car") instance=ExtResource("23_gjdqh")]
car = NodePath("..")

[node name="HitBulletWeapon" parent="." node_paths=PackedStringArray("health") instance=ExtResource("24_5xxqo")]
health = NodePath("../Health")

[node name="DynaSpamWeapon" parent="." instance=ExtResource("25_naokf")]

[node name="BulletSpamWeapon" parent="." instance=ExtResource("26_atya4")]

[connection signal="has_died" from="Health" to="." method="_on_health_has_died"]
[connection signal="has_died" from="Health" to="StateMachine/Dead" method="_on_health_has_died"]
[connection signal="was_hurt" from="Health" to="." method="_on_health_was_hurt"]
[connection signal="timeout" from="StateMachine/Spawn/StartTimer" to="StateMachine/Spawn" method="_on_start_timer_timeout"]
[connection signal="timeout" from="StateMachine/Hunt/TurnTimer" to="StateMachine/Hunt" method="_on_turn_timer_timeout"]
[connection signal="timeout" from="StateMachine/Chase/GiveUpTimer" to="StateMachine/Chase" method="_on_give_up_timer_timeout"]
[connection signal="timeout" from="StateMachine/Chase/DashTimer" to="StateMachine/Chase" method="_on_dash_timer_timeout"]
[connection signal="timeout" from="StateMachine/Dash/DashTimer" to="StateMachine/Dash" method="_on_dash_timer_timeout"]
[connection signal="knocked_back" from="Hurtbox" to="." method="_on_hurtbox_knocked_back"]
[connection signal="body_entered" from="CarFinder" to="StateMachine/Hunt" method="_on_car_finder_body_entered"]
[connection signal="body_entered" from="CarFinder" to="StateMachine/Chase" method="_on_car_finder_body_entered"]
[connection signal="body_exited" from="CarFinder" to="StateMachine/Chase" method="_on_car_finder_body_exited"]
[connection signal="area_entered" from="ArenaDetect" to="." method="_on_arena_detect_area_entered"]
[connection signal="area_exited" from="ArenaDetect" to="." method="_on_arena_detect_area_exited"]
[connection signal="timeout" from="Fortnite" to="." method="_on_fortnite_timeout"]
